# quickbox

./: .clang-tidy  CMakeLists.txt  README.md
libqf/: CMakeLists.txt
libsiut/: CMakeLists.txt  libsiut-cs_CZ.ts  libsiut-fr_FR.ts  libsiut-nb_NO.ts  libsiut-nl_BE.ts  libsiut-pl_PL.ts  libsiut-ru_RU.ts  libsiut-uk_UA.ts
quickevent/app/quickevent/: CMakeLists.txt  quickevent-cs_CZ.ts  quickevent-fr_FR.ts  quickevent-nb_NO.ts  quickevent-nl_BE.ts  quickevent-pl_PL.ts  quickevent-ru_RU.ts  quickevent-uk_UA.ts
quickevent/app/quickevent/plugins/CardReader/src/: cardchecker.cpp  cardcheckerclassiccpp.cpp  cardcheckerfreeordercpp.cpp  cardreaderplugin.cpp  cardreaderplugin.h  cardreadersettingspage.cpp  cardreadersettingspage.h  cardreaderwidget.cpp  cardreaderwidget.h  cardreaderwidget.ui
quickevent/app/quickevent/plugins/CardReader/src/services/: mqttpunches.cpp  mqttpunches.h  mqttpuncheswidget.cpp  mqttpuncheswidget.h  qropunch.cpp  qropunch.h  qropunchwidget.cpp  qropunchwidget.h  racomclient.cpp  racomclient.h  racomclientwidget.cpp  racomclientwidget.h  webapi.cpp
quickevent/app/quickevent/plugins/Classes/src/: classdefdocument.h  classdefwidget.cpp  classdefwidget.h  classdefwidget.ui  classdocument.cpp  classdocument.h  classesplugin.cpp  classesplugin.h  classestableview.cpp  classestableview.h  classeswidget.cpp  classeswidget.h  classeswidget.ui  editcodeswidget.cpp  editcodeswidget.h  editcodeswidget.ui  editcoursecodeswidget.cpp  editcoursecodeswidget.h  editcoursecodeswidget.ui  editcourseswidget.cpp  editcourseswidget.h  editcourseswidget.ui
quickevent/app/quickevent/plugins/Classes/src/drawing/: classitem.cpp  drawingganttwidget.cpp  drawingganttwidget.h  ganttitem.cpp  ganttruler.cpp  ganttscene.cpp  startslotheader.cpp  startslotitem.cpp  startslotitem.h
quickevent/app/quickevent/plugins/Competitors/src/: competitordocument.cpp  competitordocument.h  competitorsplugin.cpp  competitorsplugin.h  competitorswidget.cpp  competitorswidget.h  competitorwidget.cpp  competitorwidget.h  competitorwidget.ui  qrcodegen.cpp  src.pri
quickevent/app/quickevent/plugins/Core/src/: coreplugin.cpp  coreplugin.h
quickevent/app/quickevent/plugins/Core/src/widgets/: appstatusbar.cpp  appstatusbar.h  reportssettingspage.cpp  reportssettingspage.h  reportssettingspage.ui  settingsdialog.cpp  settingsdialog.h
quickevent/app/quickevent/plugins/Event/qml/: DbSchema.qml
quickevent/app/quickevent/plugins/Event/src/: connectdbdialogwidget.cpp  connectdbdialogwidget.h  connectionsettings.cpp  dbschema.cpp  eventconfig.cpp  eventconfig.h  eventdialogwidget.cpp  eventdialogwidget.h  eventdialogwidget.ui  eventplugin.cpp  eventplugin.h  findregistrationedit.cpp  lentcardssettingspage.cpp  lentcardssettingspage.h  lentcardssettingspage.ui  registrationswidget.cpp  registrationswidget.h  registrationswidget.ui  stage.cpp  stage.h  stagedocument.h  stagewidget.cpp  stagewidget.h  stagewidget.ui
quickevent/app/quickevent/plugins/Event/src/services/: emmaclient.cpp  emmaclient.h  emmaclientwidget.cpp  emmaclientwidget.h  oresultsclient.cpp  oresultsclient.h  oresultsclientwidget.cpp  oresultsclientwidget.h  oresultsclientwidget.ui  service.cpp  service.h  serviceswidget.cpp  servicewidget.cpp  servicewidget.ui
quickevent/app/quickevent/plugins/Event/src/services/ofeed/: ofeedclient.cpp  ofeedclient.h  ofeedclientwidget.cpp  ofeedclientwidget.h  ofeedclientwidget.ui
quickevent/app/quickevent/plugins/Event/src/services/qx/: qxclientservice.cpp  qxclientservice.h  qxclientservicewidget.cpp  qxclientservicewidget.h  qxclientservicewidget.ui  qxlateregistrationsmodel.cpp  qxlateregistrationsmodel.h  qxlateregistrationswidget.cpp  qxlateregistrationswidget.h  qxlateregistrationswidget.ui  runchange.cpp  runchange.h  runchangedialog.cpp  runchangedialog.h  runchangedialog.ui
quickevent/app/quickevent/plugins/Oris/src/: chooseoriseventdialog.cpp  chooseoriseventdialog.h  orisimporter.cpp  orisimporter.h  orisplugin.cpp  orisplugin.h  txtimporter.cpp  xmlimporter.cpp
quickevent/app/quickevent/plugins/Receipts/src/: receiptsplugin.cpp  receiptsplugin.h  receiptsprinter.cpp  receiptsprinteroptionsdialog.ui  receiptssettingspage.cpp  receiptswidget.cpp  receiptswidget.h  receiptswidget.ui
quickevent/app/quickevent/plugins/Relays/qml/reports/: startList_classes_condensed.qml  startList_clubs_condensed.qml
quickevent/app/quickevent/plugins/Relays/src/: addlegdialogwidget.cpp  addlegdialogwidget.h  addlegdialogwidget.ui  relaydocument.cpp  relaydocument.h  relaysplugin.cpp  relaysplugin.h  relayswidget.cpp  relayswidget.h  relayswidget.ui  relaywidget.cpp  relaywidget.h  relaywidget.ui
quickevent/app/quickevent/plugins/Runs/src/: cardflagsdialog.cpp  cardflagsdialog.h  eventstatisticsoptions.cpp  eventstatisticsoptions.h  eventstatisticswidget.cpp  eventstatisticswidget.h  eventstatisticswidget.ui  findrunneredit.cpp  findrunnerwidget.cpp  findrunnerwidget.h  printawardsoptionsdialogwidget.cpp  printawardsoptionsdialogwidget.h  runflagsdialog.cpp  runflagsdialog.h  runsplugin.cpp  runsplugin.h  runstabledialogwidget.cpp  runstabledialogwidget.h  runstableitemdelegate.cpp  runstableitemdelegate.h  runstablemodel.cpp  runstablemodel.h  runstablewidget.cpp  runstablewidget.h  runstablewidget.ui  runswidget.cpp  runswidget.h
quickevent/app/quickevent/plugins/Runs/src/services/: resultsexporter.cpp  resultsexporter.h  resultsexporterwidget.cpp  resultsexporterwidget.h
quickevent/app/quickevent/plugins/Speaker/src/: codeclassresultswidget.cpp  codeclassresultswidget.h  codeclassresultswidget.ui  punchestableview.h  speakerplugin.cpp  speakerplugin.h  speakerwidget.cpp  speakerwidget.h  speakerwidget.ui
quickevent/app/quickevent/src/: application.cpp  application.h  appversion.h  loggerwidget.cpp  loggerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  partwidget.cpp  partwidget.h
quickevent/app/quickevent/style/: default.css
quickshow/: CMakeLists.txt  quickshow-cs_CZ.ts  quickshow-fr_FR.ts  quickshow-nb_NO.ts  quickshow-nl_BE.ts  quickshow-pl_PL.ts  quickshow-ru_RU.ts  (+1 more)
(+463 files in other folders)
